--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/4d0ccbc7aa.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 
@@ -37,6 +38,8 @@
                         Ingrédients
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownIngredients">
+                        <li><input type="text" class="form-control search-input" id="searchIngredients"
+                                placeholder="Chercher..."></li>
                         <li><a class="dropdown-item" href="#">Tomate</a></li>
                         <li><a class="dropdown-item" href="#">Oignon</a></li>
                         <li><a class="dropdown-item" href="#">Poulet</a></li>
@@ -51,6 +54,8 @@
                         Appareils
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownAppareils">
+                        <li><input type="text" class="form-control search-input" id="searchAppareils"
+                                placeholder="Chercher..."></li>
                         <li><a class="dropdown-item" href="#">Four</a></li>
                         <li><a class="dropdown-item" href="#">Mixeur</a></li>
                         <li><a class="dropdown-item" href="#">Micro-ondes</a></li>
@@ -65,6 +70,8 @@
                         Ustensiles
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownUstensiles">
+                        <li><input type="text" class="form-control search-input" id="searchUstensiles"
+                                placeholder="Chercher..."></li>
                         <li><a class="dropdown-item" href="#">Couteau</a></li>
                         <li><a class="dropdown-item" href="#">Spatule</a></li>
                         <li><a class="dropdown-item" href="#">Casserole</a></li>
