--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="header-content">
             <h1>Bienvenue sur notre site</h1>
             <div class="search-bar">
-                <input type="text" class="form-control" placeholder="Rechercher..."><i
-                    class="fa-solid fa-magnifying-glass"></i>
+                <input id="searchInput" type="text" class="form-control" placeholder="Rechercher...">
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
     </header>
@@ -80,7 +80,7 @@
             </div>
             <!-- Paragraphe poussé à droite -->
             <div class="col">
-                <p class="ms-auto text-end">1500</p>
+                 <p id="recipe-count" class="ms-auto text-end">0 recettes</p> <!-- Nombre de recettes -->
             </div>
         </div>
 
