--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -15,19 +16,20 @@
     <title>Document</title>
 </head>
 
-<body class="bg-secondary">
+<body class="bg-light-medium">
 
     <header class="header">
+        <img class="mt-2 ms-2" src="images/Logo (1).png" alt="logo les petits plats">
         <div class="header-content">
             <h1>Chercher parmi plus de 1500 recettes du quotidien, simples et délicieuses</h1>
             <div class="search-bar">
-                <input id="searchInput" type="text" class="form-control" placeholder="Rechercher...">
+                <input id="searchInput" type="text" class="form-control" placeholder="Rechercher une recette, un ingrédient...">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
             </div>
         </div>
     </header>
 
-    <main class="container mt-4 ">
+    <main class="container-fluid p-4 ps-5 ms-3">
 
         <div class="row">
             <!-- Filtres -->
@@ -76,7 +78,7 @@
 
             <!-- Nombre de recettes -->
             <div class="col">
-                <p id="recipe-count" class="ms-auto text-end me-5 fw-bold text-black">0 recettes</p>
+                <p id="recipe-count" class="ms-auto text-end me-5 pe-3 fw-bold text-black">0 recettes</p>
             </div>
 
             <!-- Tags sélectionnés -->
