--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main class="container-fluid p-4 ps-5 ms-3">
 
-        <div class="row">
+        <div class="row mb-5">
             <!-- Filtres -->
             <div class="col-md-2">
                 <div class="dropdown">
